<resources>
    <string name="app_name">Mobitill</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_error">Wrong Password or Username</string>
    <string name="empty_username">Username cannot be blank</string>
    <string name="empty_password">Password cannot be blank</string>
    <string name="navigation_view_header_title">Mobitill</string>
    <string name="products">Products</string>
    <string name="fleet">Fleet</string>
    <string name="reports">Reports</string>
    <string name="menu_filter">Filter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="quantity">Transactions</string>
    <string name="total">Total</string>
    <string name="date_picker_title">Date of crime.</string>
    <string name="clients">Clients</string>
    <string name="cashiers">Cashiers</string>
    <string name="home">Home</string>
    <string name="no_products">No Items For This Category</string>
    <string name="no_network">No Network. Check Your Connection</string>
    <string name="no_cashiers">No Cashiers Available or Error Occured</string>
    <string name="no_clients">No Clients Available For Application</string>
    <string name="no_fleet">No Fleet Retrieved For Application</string>
    <string name="cashier_name_hint">Name</string>
    <string name="hint_cashier_name">Name</string>
    <string name="hint_cashier_password">Password</string>
    <string name="hint_cashier_username">Username</string>
    <string name="no_network_error">No Network</string>
    <string name="check_your_connection_warning">Check Your Connection</string>
    <string name="empty_field_message">All fields must be filled</string>
    <string name="action_delete">Delete</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="hint_client_email">Email</string>
    <string name="hint_client_name">Name</string>
    <string name="hint_client_phone">Telephone</string>
    <string name="hint_fleet_no">Fleet Number</string>
    <string name="hint_plate_no">Plate Number</string>
    <string name="hint_product_identifier">Identifier</string>
    <string name="hint_product_categories">Categories</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_description">Description</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_size">Size</string>
    <string name="hint_product_vat">VAT</string>
    <string name="error">Oops.An error occurred while retrieving data</string>
    <string name="delete_success">Item deleted</string>
    <string name="delete_fail">Item delete failed</string>
    <string name="action_update">Update</string>
    <string name="applications">Applications</string>
    <string name="filter">Filter</string>
    <string name="inventory">Inventory</string>
    <string name="action_logs">Show Logs</string>
    <string name="action_list">Show List</string>
    <string name="invalid_product_identifier">Invalid Product Identifier</string>
</resources>
