<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/no_network"
            android:gravity="center"
            android:visibility="gone"
            android:text="No Network. Check Your Connection"/>

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:id="@+id/report_layout"
                      android:layout_marginTop="@dimen/activity_vertical_margin"
                      android:layout_marginRight="@dimen/activity_horizontal_margin"
                      android:layout_marginLeft="@dimen/activity_horizontal_margin"
                      tools:context="com.mobitill.mobitill_2.reports.ReportsFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:elevation="4dp"
                android:background="@color/colorPrimaryLight"
                android:padding="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/product"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:spinnerMode="dropdown"
                    android:theme="@style/ThemeSpinner"

                    />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cashier"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:spinnerMode="dropdown"
                    android:theme="@style/ThemeSpinner"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:id="@+id/from"
                        android:background="@drawable/round_button"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:id="@+id/to"
                        android:background="@drawable/round_button"/>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/colorPrimary"
                android:elevation="@dimen/elevation_4dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textSize="@dimen/report_large_text"
                    android:textColor="@color/colorTextLight"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/quantity"
                    android:textColor="@color/colorTextLight"
                    android:textSize="@dimen/report_large_text"
                    android:text="0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/colorPrimaryDark"
                android:elevation="3dp"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/report_large_text"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/total"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/report_large_text"
                    android:textColor="@color/colorTextLight"
                    android:id="@+id/total"
                    android:text="0"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>



</ScrollView>