<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             android:background="@color/colorPrimaryDark"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             tools:context="com.mobitill.mobitill_2.components.showall.ShowAllFragment">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/no_network"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textColor="@color/colorTextLight"
            android:text="@string/no_network"/>


    </LinearLayout>



    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_16dp"
                android:orientation="vertical"
                card_view:cardCornerRadius="2dp"
                card_view:cardBackgroundColor="@color/colorCardBackground"
                card_view:cardElevation="@dimen/elevation_16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/no_products"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/no_products"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/error"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:textColor="@color/colorTextLight"
                    android:text="@string/error"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_8dp"
                    android:paddingRight="@dimen/padding_8dp"
                    >



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/header_layout"
                        android:orientation="horizontal"
                        />

                    <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:background="@color/colorTextDark"/>-->

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recycler_view"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"/>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>
        </FrameLayout>

    </HorizontalScrollView>






</LinearLayout>
