<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="@dimen/elevation_4dp">

            <ImageButton
                android:id="@+id/button_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_done"/>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/colorBackground"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_16dp"
            android:clickable="true"
            >

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_16dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardBackgroundColor="@color/colorCardBackground"
                card_view:cardElevation="@dimen/elevation_2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/margin_32dp"
                    android:layout_marginRight="@dimen/margin_16dp"
                    android:layout_marginLeft="@dimen/margin_16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter"
                        android:textColor="@color/colorTextLight"
                        android:textSize="@dimen/text_detail_large"
                        android:layout_gravity="center"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/margin_button"
                            android:layout_height="wrap_content"
                            android:id="@+id/button_from"
                            android:background="@drawable/button_border"
                            android:textColor="@color/colorTextLight"
                            android:text="@string/from"/>


                        <Button
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_margin="@dimen/margin_button"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorTextLight"
                            android:id="@+id/button_to"
                            android:background="@drawable/button_border"
                            android:text="@string/to"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_16dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardBackgroundColor="@color/colorCardBackground"
                card_view:cardElevation="@dimen/elevation_2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/spinner_layout"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

